# introtodeeplearning

./: README.md  pyproject.toml
lab1/: PT_Part1_Intro.ipynb  TF_Part1_Intro.ipynb  TF_Part2_Music_Generation.ipynb  tmp.abc
lab1/solutions/: PT_Part1_Intro_Solution.ipynb
lab2/: PT_Part1_MNIST.ipynb  TF_Part1_MNIST.ipynb  TF_Part2_Debiasing.ipynb
lab2/solutions/: PT_Part1_MNIST_Solution.ipynb
lab3/: LLM_Finetuning.ipynb
