[project]
name = "introtodeeplearning"
version = "0.7.5"
license = "MIT"
description = "Lab Materials for MIT 6.S191: Introduction to Deep Learning"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "comet-ml>=3.54.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "mitdeeplearning>=0.7.5",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
