[project]
name = "introtodeeplearning"
version = "0.7.5"
license = "MIT"
description = "Lab Materials for MIT 6.S191: Introduction to Deep Learning"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "comet-ml>=3.54.0",
    "datasets>=2.19.1",
    "dotenv>=0.9.9",
    "gym>=0.26.2",
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.7",
    "mitdeeplearning>=0.7.5",
    "numpy>=2.1.2",
    "openai>=2.7.1",
    "opencv-python>=4.12.0.88",
    "opik>=1.8.99",
    "peft>=0.17.1",
    "regex>=2025.11.3",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
